--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,9 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <form class="popup__form" name="edit-profile" novalidate>
-        <input type="text" name="name" id="popup__input_name" class="popup__input popup__input_type_name" placeholder="Имя" minlength="2" maxlength="40" required>
+        <input type="text" name="name" id="popup__input_name" class="popup__input popup__input_type_name" pattern="^[a-zA-Zа-яА-ЯёЕ\-\s]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" placeholder="Имя" minlength="2" maxlength="40" required>
         <span class="popup__input_error popup__input_name_error"></span>
-        <input type="text" name="description" id="popup__input_description" class="popup__input popup__input_type_description" placeholder="Занятие" minlength="2" maxlength="200" required>
+        <input type="text" name="description" id="popup__input_description" class="popup__input popup__input_type_description" pattern="^[a-zA-Zа-яА-ЯёЕ\-\s]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" placeholder="Занятие" minlength="2" maxlength="200" required>
         <span class="popup__input_error popup__input_description_error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
@@ -61,7 +61,7 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="new-place" novalidate>
-        <input type="text" name="place-name" id="popup__input_card-name" class="popup__input popup__input_type_card-name" placeholder="Название" minlength="2" maxlength="30" required>
+        <input type="text" name="place-name" id="popup__input_card-name" class="popup__input popup__input_type_card-name" pattern="^[a-zA-Zа-яА-ЯёЕ\-\s]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" placeholder="Название" minlength="2" maxlength="30" required>
         <span class="popup__input_error popup__input_card-name_error"></span>
         <input type="url" name="link" id="popup__input_url" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
         <span class="popup__input_error popup__input_url_error"></span>
